k8s/ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-deployment
  namespace: bloodconnect

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ai-service

  template:
    metadata:
      labels:
        app: ai-service

    spec:
      containers:
        - name: ai-container
          image: rihab10/ai-service:v2
          ports:
            - containerPort: 50051
