k8s/hospital-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hospital-deployment
  namespace: bloodconnect

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hospital-backend

  template:
    metadata:
      labels:
        app: hospital-backend

    spec:
      containers:
        - name: hospital-container
          image: rihab10/hospital-backend:v3
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /
              port: 8000

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 8000
