k8s/ai-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-service
  namespace: bloodconnect

spec:
  selector:
    app: ai-service

  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051

  type: ClusterIP
