k8s/donor-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: donor-service
  namespace: bloodconnect

spec:
  selector:
    app: donor-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: NodePort
