k8s/hospital-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hospital-service
  namespace: bloodconnect

spec:
  selector:
    app: hospital-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: NodePort
